Fix click behavior. Align Items

--- a/src/music-mapping.less
+++ b/src/music-mapping.less
@@ -13,6 +13,7 @@
   margin: 10px 0 !important;
 
   .ant-collapse-header {
+    align-items: center !important;
     background-color: @edu-background-color-light !important;
     border-top-left-radius: @edu-border-radius-base !important;
     border-top-right-radius: @edu-border-radius-base !important;
@@ -39,10 +40,6 @@
   display: grid;
   gap: 3px;
   grid-auto-flow: column;
-}
-
-.mm-align-center {
-  align-items: center !important;
 }
 
 .MusicMapping-loaded-card {
